Dyad 2: Fix spacing issue in the header when a logo is applied and WooCommerce is active. Fixes #202.

--- a/dyad-2/woocommerce.css
+++ b/dyad-2/woocommerce.css
@@ -861,10 +861,6 @@ ul.order_details li strong {
 /**
  * Header cart
  */
-.woocommerce-active #site-navigation {
-	width: 50%;
-}
-
 .site-header-cart {
 	display: table-cell;
 	font-size: 1.4rem;
